WebCore/accessibility/AccessibilitySlider.h
@@ -56,6 +56,7 @@ namespace WebCore {
         virtual float valueForRange() const;
         virtual float maxValueForRange() const;
         virtual float minValueForRange() const;
+        virtual AccessibilityOrientation orientation() const;
 
         virtual void increment();
         virtual void decrement();
